20130130-0305 Codelgniter_2.1.30Y7p2HABT10gJdDjgBFnEp7gRUCaAlBFEC81gbQ<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WatsonsWine</string>
    <string name="size_tag">Size:</string>
    <string name="rating_tag">Rating:</string>
    <string name="ori_price_tag">Regular Price:</string>
    <string name="pro_price_tag">Offer Price:</string>
    <string name="hk">Hong Kong</string>
    <string name="kl">Kowloon</string>
    <string name="nt">New Territories</string>
    <string name="others">Others</string>
    <string name="search_hint">Search Here</string>
	<string name="google_map_api_key">0XbtqCwlkJ21-hwCkGC2SeDJz0cvuq-vtuLATpA</string>
	<string name="sponsor">In association with:</string>
</resources>