<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal">
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_wine_item_trim"
    android:orientation="horizontal"
    android:padding="5dp" >

    <ImageView
        android:id="@+id/list_product_item_image"
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/app_name"
        android:gravity="center_vertical" />

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="3"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/list_product_item_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:textColor="@color/Maroon"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/list_product_item_size_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/list_product_item_size_tag"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/size_tag"
                android:textColor="@color/Black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/list_product_item_size_value"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@color/Black"
                android:textSize="14sp" />
        </LinearLayout>
		<LinearLayout
            android:id="@+id/list_product_item_rating_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/list_product_item_rating"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/rating_tag"
                android:textColor="@color/Black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                >
	            <TextView
	                android:id="@+id/list_product_item_rating_rp_value"
	                android:layout_width="fill_parent"
	                android:layout_height="0dip"
	                android:layout_weight="1"
	                android:gravity="center_vertical"
	                android:textColor="@color/Black"
	                android:textSize="14sp" />
	            <TextView
	                android:id="@+id/list_product_item_rating_ws_value"
	                android:layout_width="fill_parent"
	                android:layout_height="0dip"
	                android:layout_weight="1"
	                android:gravity="center_vertical"
	                android:textColor="@color/Black"
	                android:textSize="14sp" />
	            <TextView
	                android:id="@+id/list_product_item_rating_jh_value"
	                android:layout_width="fill_parent"
	                android:layout_height="0dip"
	                android:layout_weight="1"
	                android:gravity="center_vertical"
	                android:textColor="@color/Black"
	                android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/list_product_item_ori_price_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/list_product_item_ori_price_tag"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/ori_price_tag"
                android:textColor="@color/Black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/list_product_item_ori_price_value"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@color/Black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/list_product_item_pro_price_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/list_product_item_pro_price_tag"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/pro_price_tag"
                android:textColor="@color/Black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/list_product_item_pro_price_value"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@color/OrangeRed"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>

<ImageView
        android:id="@+id/explist_indicator"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="14dp"
        android:src="@drawable/arrow_right"
        android:contentDescription="@string/app_name" />
</RelativeLayout>
